# mfinance

./: AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md  dev
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: config.rs  lib.rs  main.rs  number_formatter.rs  tui.rs
src/templates/: index.html
tests/: cli.rs  server_api.rs  tui.rs
tests/snapshots/: cli__config_warning_on_invalid_config.snap  tui__add_entry_popup.snap  tui__debit_credit_view.snap  tui__edit_entry_popup.snap  tui__entry_navigation_0.snap  tui__entry_navigation_1.snap  tui__file_navigation_second.snap  tui__file_navigation_third.snap  tui__file_navigation_wrapped.snap  tui__focus_back_to_files.snap  tui__focus_files.snap  tui__focus_year_details.snap  tui__focus_years.snap  tui__initial_display.snap  tui__popup_close.snap  tui__popup_error_cleared.snap  tui__popup_error_invalid_date.snap  tui__popup_input_focus.snap  tui__year_navigation_2024.snap  tui__year_navigation_2025.snap
