[package]
name = "mfinance"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
csv = "1.2"
rust_decimal = "1.38"
chrono = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
main_error = "0.1.2"
thiserror = "2.0.16"
ratatui = "0.29"
crossterm = "0.28"
tui-input = "0.10"

[dev-dependencies]
insta = { version = "1.43.2", features = ["filters"] }
insta-cmd = "0.6.0"
temp-dir = "0.1.16"
